# hasgeek-agentic-workshop-blr

./: README.md
conditional-routing/: .gitignore  README.md  app.py  pyproject.toml
multi-agent-workflow/: .env.example  .gitignore  README.md  main.py  multi_agentic_workflow.py  pyproject.toml
multi-agent-workflow/agents/: __init__.py  explainer_agent.py  learner_agent.py  orchestrator_agent.py
multi-agent-workflow/notion_mcp/: notion_mcp_client.py
multi-agent-workflow/tools/: __init__.py  firecrawl_tool.py  save_to_notion.py
